--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
       <div class="container-xxl py-2 text-center">
         <h1 class="section-title justify-content-center">Contato</h1>
         <div class="container-xxl">
-          <div class="row height-limit mt-5">
+          <div class="row height-limit mt-4">
             <div class="col-4 border p-4 contact-section py-5">
               <div class="row h-25">
                 <div class="col w-100">
@@ -496,7 +496,7 @@
           <div class="row">
             <div class="col">
               <div class="card card-services">
-                <div class="card-top-img d-flex justify-content-center">
+                <div class="card-top-img d-flex img-services justify-content-center">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" width="110px"
                     height="110px" style="enable-background:new 0 0 512 512; margin-bottom: 7.5px; margin-top: 7.5px;"
@@ -591,7 +591,7 @@
             </div>
             <div class="col">
               <div class="card card-services">
-                <div class="card-top-img d-flex justify-content-center">
+                <div class="card-top-img d-flex img-services justify-content-center">
                   <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 491.1 491.1"
                     style="enable-background:new 0 0 491.1 491.1;" width="125px" height="125px" xml:space="preserve">
@@ -661,7 +661,7 @@
             </div>
             <div class="col">
               <div class="card card-services">
-                <div class="card-top-img d-flex justify-content-center">
+                <div class="card-top-img d-flex img-services justify-content-center">
                   <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 377.816 377.816" width="105px" height="105px"
                     style="enable-background:new 0 0 377.816 377.816; margin-top: 10px; margin-bottom: 10px;" xml:space="preserve">
@@ -702,7 +702,6 @@
                     <g>
                     </g>
                   </svg>
-
                 </div>
                 <div class="card-body">
                   <h5 class="card-title card-title-services text-center">Assistência</h5>
@@ -711,6 +710,13 @@
               </div>
             </div>
           </div>
+    </section>
+    <section class="py-5">
+      <div class="container-xxl py-2 text-center">
+        <h1 class="section-title justify-content-center">Sobre Nós</h1>
+        <div class="container-xxl mt-4">
+          <p>A BR2TI atua no mercado corporativo trazendo soluções e venda de peças de reposição e up-grade com garantia.<br>Localizada em São Paulo, temos um canal de Importação das Peças com prazo médio de no maximo 15 dias.<br>Mas também oferecemos um acervo de peças a pronta entrega para melhor lhe atender.<br><br>Sua empresa esta trocando os computadores, nos avise, fazemos também compra de lotes.</p>
+        </div>
     </section>
   </main>
   <footer class="text-center text-lg-start bg-light text-muted">
