--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
   <link rel="stylesheet" href="./assets/css/products.css">
   <link rel="stylesheet" href="./assets/css/contact.css">
   <link rel="stylesheet" href="./assets/css/services.css">
+  <link rel="stylesheet" href="./assets/css/aboutus.css">
+  <link rel="stylesheet" href="./assets/css/newsletter.css">
   <script defer src="./assets/js/navbar.js"></script>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -467,7 +469,7 @@
                 <div class="row mt-4">
                   <div class="col-md-12">
                     <div class="md-form mb-0">
-                      <label class="label-contact" for="subject" class="">Subject</label>
+                      <label class="label-contact" for="subject" class="">Assunto</label>
                       <input type="text" id="subject" name="subject" class="form-control">
                     </div>
                   </div>
@@ -475,7 +477,7 @@
                 <div class="row mt-4">
                   <div class="col-md-12">
                     <div class="md-form">
-                      <label class="label-contact" for="message">Your message</label>
+                      <label class="label-contact" for="message">Mensagem</label>
                       <textarea type="text" id="message" name="message" rows="5"
                         class="form-control md-textarea"></textarea>
                     </div>
@@ -716,131 +718,39 @@
         <h1 class="section-title justify-content-center">Sobre Nós</h1>
         <div class="container-xxl mt-4">
           <p>A BR2TI atua no mercado corporativo trazendo soluções e venda de peças de reposição e up-grade com garantia.<br>Localizada em São Paulo, temos um canal de Importação das Peças com prazo médio de no maximo 15 dias.<br>Mas também oferecemos um acervo de peças a pronta entrega para melhor lhe atender.<br><br>Sua empresa esta trocando os computadores, nos avise, fazemos também compra de lotes.</p>
+          <div class="row justify-content-center mt-4 mb-3">
+            <div class="col-auto aboutus-imgs">
+              <img class="aboutusimg rounded" src="./assets/images/serveraboutus.jpg" alt="">
+            </div>
+            <div class="col-auto aboutus-imgs">
+              <img class="aboutusimg rounded" src="./assets/images/boxaboutus.jpg" alt="">
+            </div>
+          </div>
         </div>
+    </section>
+    <section>
+      <div class="container-fluid section-newsletter">
+        <div class="container-xxl py-5 text-center">
+          <h4>Fique por dentro</h4>
+          <h1 class="section-title justify-content-center">Receba Nossas Promoções</h1>
+          <h2>Exclusividade para Clientes</h2>
+          <div class="container-xxl mt-4">
+            <form method="post">
+              <div class="row justify-content-center">
+                <div class="col-auto">
+                  <input type="text" id="A" name="a" class="form-control w-100" placeholder="Nome">
+                </div>
+                <div class="col-auto">
+                  <input type="email" id="aaa" name="a" class="form-control w-100" placeholder="Email">
+                </div>
+              </div>
+              <button class="btn w-25 btn-send mt-4" href="#" role="button">Enviar</button>
+            </form>
+          </div>
+        </div>
+      </div>
     </section>
   </main>
-  <footer class="text-center text-lg-start bg-light text-muted">
-    <!-- Section: Social media -->
-    <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-      <!-- Left -->
-      <div class="me-5 d-none d-lg-block">
-        <span>Get connected with us on social networks:</span>
-      </div>
-      <!-- Left -->
-
-      <!-- Right -->
-      <div>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-google"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-instagram"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="" class="me-4 text-reset">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <!-- Right -->
-    </section>
-    <!-- Section: Social media -->
-
-    <!-- Section: Links  -->
-    <section class="">
-      <div class="container text-center text-md-start mt-5">
-        <!-- Grid row -->
-        <div class="row mt-3">
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-            <!-- Content -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              <i class="fas fa-gem me-3"></i>Company name
-            </h6>
-            <p>
-              Here you can use rows and columns to organize your footer content. Lorem ipsum
-              dolor sit amet, consectetur adipisicing elit.
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Products
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Angular</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">React</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Vue</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Laravel</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Useful links
-            </h6>
-            <p>
-              <a href="#!" class="text-reset">Pricing</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Settings</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Orders</a>
-            </p>
-            <p>
-              <a href="#!" class="text-reset">Help</a>
-            </p>
-          </div>
-          <!-- Grid column -->
-
-          <!-- Grid column -->
-          <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-            <!-- Links -->
-            <h6 class="text-uppercase fw-bold mb-4">
-              Contact
-            </h6>
-            <p><i class="fas fa-home me-3"></i> New York, NY 10012, US</p>
-            <p>
-              <i class="fas fa-envelope me-3"></i>
-              info@example.com
-            </p>
-            <p><i class="fas fa-phone me-3"></i> + 01 234 567 88</p>
-            <p><i class="fas fa-print me-3"></i> + 01 234 567 89</p>
-          </div>
-          <!-- Grid column -->
-        </div>
-        <!-- Grid row -->
-      </div>
-    </section>
-    <!-- Section: Links  -->
-
-    <!-- Copyright -->
-    <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright:
-      <a class="text-reset fw-bold" href="https://mdbootstrap.com/">MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  </footer>
 </body>
 
 </html>
